# Protonox-Kivy-Multiplatform-Framework

./: .gitignore  .mailmap  CHANGELOG.md  Dockerfile  Kivy Environment Diagnostic Tool  MANIFEST.md  PACKAGING.md  README.md  adb_pairing_wsl.py  adb_setup_server.py  adb_wireless_pairing.py  demo_sdl3_test.py  kivy_env_info_with_env_vars.sh  live_reload_demo.py  live_reload_guide.py  live_reload_launcher.py  live_reload_server.py  protonox.yaml  protonox_workflow.py  pyproject.toml  run_tests.py  simple_wireless_server.py  test_app.py  test_client.py  test_window_providers.py  websocket_server.py
.venv_build/: pyvenv.cfg
Kivy-Tools-For-Devs/: __init__.py  analyze_kv.py  generate_kv_id_report.py  kivy_env_info.py  main.py  requirements.txt
docs/: ANDROID_BUILD_LESSONS.md  CLI.md  DOCKER.md  HOT_RELOAD_ENGINE.md  KIVY_231_NO_BREAK_GUIDE.md  PROTONOX_STUDIO_WEB2KIVY_INTEGRATION.md  README.md  RELEASES.md  WEB_TO_KIVY_PIPELINE.md  build_pipeline.md  compiling.md  firebase_integration.md  optimizations.md  render_integration.md  roadmap_2025_2030.md  (+2 more)
protonox_test_app/: README.md  README_DEPLOYMENT.md  check_ready.sh  demo_protonox_features.py  deploy_wsl.sh  glibc_macros.h  pyproject.toml  requirements.txt  run_app.py  setup.py  setup_usb.sh  setup_wireless.sh  troubleshoot_wsl.sh
protonox_test_app/app/: main.py
protonox_test_app/app/login/: recover_view.py
protonox_test_app/app/payments/: pay_view.py
protonox_test_app/app/services/: firebase_service.py
protonox_test_app/kv/: payments.kv  reports.kv
protonox_test_app/venv_buildozer/: pyvenv.cfg
(+296 files in other folders)
