[tool.protonox]
name = "protonox-app-complete"
python = "3.11"

[project]
name = "protonox-app-complete"
version = "0.1.0"
description = "Kivy Protonox template with Firebase and Render integrations"
requires-python = ">=3.11"
dependencies = [
    # Kivy Protonox with enhanced features
    "-e ../kivy-protonox-version/",
    "requests>=2.31.0",
]
